@@ -121,8 +121,6 @@ description files output by Glade
 <p>
 The <a href="FAQ">Glade FAQ</a> contains some answers to common problems
 using Glade.
-(A French translation can be found
-<a href="http://yellowspoon.free.fr">here</a>, on the Linux page.)
 </p>
 <p>Damon Chaplin (damon at gnome.org)<br></p>
 </font>
@@ -164,6 +162,23 @@ Oct&nbsp;1&nbsp;2003
 
 -->
 
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+May&nbsp;12&nbsp;2003
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>New Glade 2 Tutorial</B>
+<P>
+Rikke D. Giles has written a
+<a href="http://www.kplug.org/glade_tutorial/glade2_tutorial/glade2_introduction.html">new tutorial for Glade 2</a>.
+</font></td></tr>
+
+
+
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
@@ -178,6 +193,8 @@ Saki Arkoudopoulos has written a
 <a href="http://lumumba.luc.ac.be/~saki/courses/Glade">Dutch translation of
 the Glade Manual</a>.
 </font></td></tr>
+
+
 
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
@@ -246,7 +263,7 @@ Aug&nbsp;28&nbsp;2002
 <p>
 Olivier Karquel spotted <a href="http://gug.tuxfamily.org">a new
 website for French Glade users</a>. He also says that he's updated his
-<a href="http://yellowspoon.free.fr/glade">Glade Reference Manual (in French)
+<a href="http://yellowspoon.tuxfamily.org/linux/">Glade Reference Manual (in French)
 </a>.
 </P>
 
@@ -345,7 +362,7 @@ Nov&nbsp;7&nbsp;2001
 <B>Updated French Documentation</B>
 <P>
 Olivier Karquel has posted
-<a href="http://yellowspoon.free.fr/">updated French Glade and libglade documentation</a>.
+<a href="http://yellowspoon.tuxfamily.org/linux/">updated French Glade and libglade documentation</a>.
 (Click on the 'Glade' button at the bottom of the page.)
 </font></td></tr>
 
@@ -377,7 +394,7 @@ Jun&nbsp;21&nbsp;2001
 <B>Updated French Translation of Glade FAQ</B>
 <P>
 Olivier Karquel has posted an updated
-<a href="http://yellowspoon.free.fr/">French translation of the Glade FAQ</a>.
+<a href="http://yellowspoon.tuxfamily.org/linux/">French translation of the Glade FAQ</a>.
 (Click on the 'Glade' button at the bottom of the page.)
 </font></td></tr>
 
