@@ -1,3 +1,8 @@
+2003-05-12  Damon Chaplin  <damon@gnome.org>
+
+	* index.html: updated links to Olivier Karquel's French docs.
+	added link to new tutorial.
+
 2003-04-28  Damon Chaplin  <damon@gnome.org>
 
 	* index.html: added pointer to Dutch translation of manual.
